# onomondo-softsim-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  dummy-test-key  dummy-test-key.pub
.github/workflows/: lint-commits.yml  release-bin.yml  release-please.yml  rust.yml
api-key/: bb-key  formattet-key
resources/test/: key  key.pub  response.json
src/: config.rs  main.rs  profile_fetcher.rs
src/models/: fs.rs  mod.rs  profile.rs  ss_error.rs
src/models/profile/: api.rs  crypto.rs  encoder.rs
