[package]
name = "ss_cli"
version = "0.2.0"
edition = "2021"

debug = true

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rsa = { version = "0.9.2", features = ["sha2", "sha1"] }
serde =  {version = "1.0.163",  features = ["derive"] }
serde_json = "1.0.96"
sha1 = "0.10.5"
tokio = { version = "1", features = ["full"] }


